Fixed Select option alignment and Right side toggle button in VMS and PA

--- a/src/app/routes/dashboard-pa/dashboard-pa.component.css
+++ b/src/app/routes/dashboard-pa/dashboard-pa.component.css
@@ -192,7 +192,7 @@
   position: fixed;
   right: -10px;
   top: 50%;
-  z-index: 10;
+  z-index: 1111;
   cursor: pointer;
   transform: translateY(-50%);
   height: 50px;
